# showroomflow

./: .env.example  .env.production.example  .gitignore  README.md  compose.production.yaml  compose.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml  start.sh
backend/app/: __init__.py  admin.py  api_usage.py  bootstrap.py  config.py  database.py  exporting.py  generate_web_push_keys.py  image_service.py  main.py  models.py  orientations.py  processing.py  processing_queue.py  push_notifications.py  quality_review_events.py  schemas.py  security.py  sftp_transfer.py  storage.py  thumbnail_backfill.py  thumbnails.py  worker.py
backend/app/api/: auth.py  capture.py  configuration.py  dealerships.py  dependencies.py  jobs.py  locations.py  router.py  storage.py  users.py
backend/app/static/: admin-live-refresh.js  admin-push-service-worker.js  admin-push.js  admin.css
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_active_tenant_entities.py  0003_capture_configuration.py  0004_photo_assets.py  0005_image_processing.py  0006_processing_variants.py  0007_image_service_credits.py  0008_carryover_credit_topups.py  0009_comparison_mode.py  0010_overlay_supplemental_assets.py  0011_zip_exports.py  0012_sftp_transfer.py  0013_central_scaling_profiles.py  0014_automatic_contour_scaling.py  (+17 more)
backend/tests/: test_auth.py  test_exporting.py  test_image_service.py  test_migrations.py  test_processing.py  test_push_notifications.py  test_sftp_transfer.py  test_storage.py  test_system.py  test_thumbnails.py  test_worker.py
(+31 files in other folders)
