[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "showroomflow-api"
version = "0.1.0"
description = "Backend API for ShowroomFlow"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic-settings>=2.5,<3.0",
    "email-validator>=2.2,<3.0",
    "PyJWT>=2.9,<3.0",
    "pwdlib[argon2]>=0.2,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "alembic>=1.13,<2.0",
    "boto3>=1.35,<2.0",
    "httpx>=0.27,<1.0",
    "jinja2>=3.1,<4.0",
    "Pillow>=10.4,<13.0",
    "python-multipart>=0.0.12,<1.0",
    "redis>=5.0,<7.0",
    "rq>=2.0,<3.0",
    "itsdangerous>=2.2,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "ruff>=0.6,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
